# pydantic-agent

./: .env.example  .gitignore  404.html  CLAUDE.md  README.md  SPEC.md  config.example.toml  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
api/: index.html
api/agent/: index.html
api/backends/: index.html
api/config/: index.html
api/context/: index.html
api/errors/: index.html
api/mcp/: index.html
api/observability/: index.html
api/prompts/: index.html
api/tokens/: index.html
api/tools/: index.html
api/workflows/: index.html
changelog/: index.html
concepts/: index.html
concepts/architecture/: index.html
concepts/compaction-strategies/: index.html
concepts/execution-loop/: index.html
concepts/workflow-patterns/: index.html
contributing/: index.html
dev/: dev.ipynb
docs/: changelog.md  contributing.md  index.md
docs/api/: index.md
docs/concepts/: architecture.md  compaction-strategies.md  index.md  workflow-patterns.md
docs/getting-started/: configuration.md  index.md  installation.md  quickstart.md
docs/tutorials/: code-assistant.md  custom-tools.md  index.md  local-llm-setup.md  react-workflow.md
docs/user-guide/: agent-basics.md  context-management.md  error-handling.md  index.md  mcp-integration.md  model-backends.md  observability.md  token-tracking.md  tools.md  workflows.md
getting-started/: index.html
getting-started/configuration/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
scripts/: deploy-docs.sh
search/: search_index.json
specs/: PRD.md
specs/workflows/: react-workflow-PRD.md
src/mamba_agents/: __init__.py
src/pydantic_agent/: __init__.py
stylesheets/: extra.css
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_agent_integration.py  test_agent_mcp.py  test_config.py
tutorials/: index.html
tutorials/code-assistant/: index.html
tutorials/custom-tools/: index.html
tutorials/local-llm-setup/: index.html
tutorials/react-workflow/: index.html
user-guide/: index.html
user-guide/agent-basics/: index.html
user-guide/context-management/: index.html
user-guide/error-handling/: index.html
user-guide/mcp-integration/: index.html
user-guide/model-backends/: index.html
user-guide/observability/: index.html
user-guide/prompt-management/: index.html
user-guide/token-tracking/: index.html
(+189 files in other folders)
